Corrected alignment of attribution

--- a/styles.css
+++ b/styles.css
@@ -143,9 +143,9 @@ table {
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     min-height: 100vh;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
@@ -257,6 +257,7 @@ h1 {
     font-size: 11px;
     text-align: center;
     margin-top: auto;
+
 }
 
 .attribution a {
@@ -266,9 +267,16 @@ h1 {
 
 @media (min-width: 700px) {
 
+    body {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
     .container {
+        margin-top: auto;
         flex-direction: row;
+
     }
 
     .sedans {
